@@ -5,6 +5,8 @@ PHP                                                                        NEWS
 - Core:
   . Fixed bug GH-12207 (memory leak when class using trait with doc block).
     (rioderelfte)
+  . Fixed bug GH-12215 (Module entry being overwritten causes type errors in
+    ext/dom). (nielsdos)
 
 - Filter:
   . Fix explicit FILTER_REQUIRE_SCALAR with FILTER_CALLBACK (ilutov)
